objects/VisitOps__Agenda__c.object
<CustomObject>
    <fields>
        <fullName>VisitOps__Agenda_Subtopics__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Agenda Subtopics</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>VisitOps__Agenda_Title__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Agenda Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisitOps__Arrival_Date_Location__c</fullName>
        <formula>DATETIMEVALUE( VisitOps__Visit__r.VisitOps__ArrivalDateTimeLocationTZ__c )</formula>
        <label>Arrival Date (Location)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>VisitOps__Catering_Menu_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Catering Menu Item</label>
        <referenceTo>VisitOps__CateringProductsAndServices__c</referenceTo>
        <relationshipName>Agendas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>VisitOps__Departure_Date_Location__c</fullName>
        <formula>DATETIMEVALUE( VisitOps__Visit__r.VisitOps__DepartureDateTimeLocationTZ__c )</formula>
        <label>Departure Date (Location)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>VisitOps__Details__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Details</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>VisitOps__EndTimeLocationTZ__c</fullName>
        <description>This field stores the End Time of Agenda Session at the actual Location. Its based on Location Timezone</description>
        <encryptionScheme>None</encryptionScheme>
        <label>End Time (Location)</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisitOps__EndTimeString__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>EndTimeString</label>
        <length>19</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisitOps__End_Time_LocationFormula__c</fullName>
        <formula>IF(VALUE(LEFT(RIGHT(VisitOps__EndTimeLocationTZ__c,8),2)) == 00, 
LEFT(RIGHT(VisitOps__EndTimeLocationTZ__c,14),2) 
+ &apos;/&apos; + LEFT(RIGHT(VisitOps__EndTimeLocationTZ__c,11),2) 
+ &apos;/&apos; + LEFT(VisitOps__EndTimeLocationTZ__c,4) 
+ &apos; &apos; + TEXT(VALUE(LEFT(RIGHT(VisitOps__EndTimeLocationTZ__c,8),2))+12) 
+ &apos;:&apos; + LEFT(RIGHT(VisitOps__EndTimeLocationTZ__c,5),2) 
+ &apos; &apos; + &apos;AM&apos;,IF(VALUE(LEFT(RIGHT(VisitOps__EndTimeLocationTZ__c,8),2)) == 12,
LEFT(RIGHT(VisitOps__EndTimeLocationTZ__c,14),2) 
+ &apos;/&apos; + LEFT(RIGHT(VisitOps__EndTimeLocationTZ__c,11),2) 
+ &apos;/&apos; + LEFT(VisitOps__EndTimeLocationTZ__c,4) 
+ &apos; &apos; + TEXT(VALUE(LEFT(RIGHT(VisitOps__EndTimeLocationTZ__c,8),2))) 
+ &apos;:&apos; + LEFT(RIGHT(VisitOps__EndTimeLocationTZ__c,5),2) 
+ &apos; &apos; + &apos;PM&apos;,IF(VALUE(LEFT(RIGHT(VisitOps__EndTimeLocationTZ__c,8),2)) &lt; 12, 
LEFT(RIGHT(VisitOps__EndTimeLocationTZ__c,14),2) 
+ &apos;/&apos; + LEFT(RIGHT(VisitOps__EndTimeLocationTZ__c,11),2) 
+ &apos;/&apos; + LEFT(VisitOps__EndTimeLocationTZ__c,4) 
+ &apos; &apos; + LEFT(RIGHT(VisitOps__EndTimeLocationTZ__c,8),2) 
+ &apos;:&apos; + LEFT(RIGHT(VisitOps__EndTimeLocationTZ__c,5),2) 
+ &apos; &apos; + &apos;AM&apos;, 
LEFT(RIGHT(VisitOps__EndTimeLocationTZ__c,14),2) 
+ &apos;/&apos; + LEFT(RIGHT(VisitOps__EndTimeLocationTZ__c,11),2) 
+ &apos;/&apos; + LEFT(VisitOps__EndTimeLocationTZ__c,4) 
+ &apos; &apos; + TEXT(VALUE(LEFT(RIGHT(VisitOps__EndTimeLocationTZ__c,8),2))-12) 
+ &apos;:&apos; + LEFT(RIGHT(VisitOps__EndTimeLocationTZ__c,5),2) 
+ &apos; &apos; + &apos;PM&apos;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End Time (Location)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisitOps__End_Time__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>End Time (User)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>VisitOps__IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VisitOps__IsParked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsParked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VisitOps__LocationFormula__c</fullName>
        <description>This field is used only for Reports</description>
        <formula>VisitOps__Visit__r.VisitOps__Location__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Location</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisitOps__Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Location the Agenda Session is planned in</description>
        <label>Location</label>
        <referenceTo>VisitOps__Location__c</referenceTo>
        <relationshipName>Agendas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>VisitOps__Notes__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Notes</label>
        <length>20000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>VisitOps__Objectives__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Objectives</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>VisitOps__Place__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Place</label>
        <referenceTo>VisitOps__Place__c</referenceTo>
        <relationshipName>Agendas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>VisitOps__Presenters_Accepted__c</fullName>
        <label>Presenters Accepted</label>
        <summaryFilterItems>
            <field>VisitOps__Presenter_Agenda_Link__c.VisitOps__Status__c</field>
            <operation>equals</operation>
            <value>Accepted, New Time Proposed, Tentative</value>
        </summaryFilterItems>
        <summaryForeignKey>VisitOps__Presenter_Agenda_Link__c.VisitOps__Agenda__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>VisitOps__Room_Calendar_Status__c</fullName>
        <label>Room Calendar Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Booked</fullName>
                </value>
                <value>
                    <fullName>Not Booked</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VisitOps__Room__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Room</label>
        <referenceTo>VisitOps__Room__c</referenceTo>
        <relationshipName>Agendas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>VisitOps__Rooms_Booked__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Rooms Booked</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>VisitOps__Session_Duration__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Session Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VisitOps__Show_on_Customer_Agenda__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show on Customer Agenda</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VisitOps__Show_on_Customer_Survey__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show on Customer Survey</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VisitOps__Show_on_Presenter_Agenda__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show on Presenter Agenda</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VisitOps__Special_Instructions__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Special Instructions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>VisitOps__StartTimeLocationTZ__c</fullName>
        <description>This field stores the Start Time of Agenda Session at the actual Location. Its based on Location Timezone</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Start Time (Location)</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisitOps__StartTimeString__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>StartTimeString</label>
        <length>19</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisitOps__Start_Time_LocationFormula__c</fullName>
        <formula>IF(VALUE(LEFT(RIGHT(VisitOps__StartTimeLocationTZ__c,8),2)) == 00, 
LEFT(RIGHT(VisitOps__StartTimeLocationTZ__c,14),2) 
+ &apos;/&apos; + LEFT(RIGHT(VisitOps__StartTimeLocationTZ__c,11),2) 
+ &apos;/&apos; + LEFT(VisitOps__StartTimeLocationTZ__c,4) 
+ &apos; &apos; + TEXT(VALUE(LEFT(RIGHT(VisitOps__StartTimeLocationTZ__c,8),2))+12) 
+ &apos;:&apos; + LEFT(RIGHT(VisitOps__StartTimeLocationTZ__c,5),2) 
+ &apos; &apos; + &apos;AM&apos;,IF(VALUE(LEFT(RIGHT(VisitOps__StartTimeLocationTZ__c,8),2)) == 12,
LEFT(RIGHT(VisitOps__StartTimeLocationTZ__c,14),2) 
+ &apos;/&apos; + LEFT(RIGHT(VisitOps__StartTimeLocationTZ__c,11),2) 
+ &apos;/&apos; + LEFT(VisitOps__StartTimeLocationTZ__c,4) 
+ &apos; &apos; + TEXT(VALUE(LEFT(RIGHT(VisitOps__StartTimeLocationTZ__c,8),2))) 
+ &apos;:&apos; + LEFT(RIGHT(VisitOps__StartTimeLocationTZ__c,5),2) 
+ &apos; &apos; + &apos;PM&apos;,IF(VALUE(LEFT(RIGHT(VisitOps__StartTimeLocationTZ__c,8),2)) &lt; 12, 
LEFT(RIGHT(VisitOps__StartTimeLocationTZ__c,14),2) 
+ &apos;/&apos; + LEFT(RIGHT(VisitOps__StartTimeLocationTZ__c,11),2) 
+ &apos;/&apos; + LEFT(VisitOps__StartTimeLocationTZ__c,4) 
+ &apos; &apos; + LEFT(RIGHT(VisitOps__StartTimeLocationTZ__c,8),2) 
+ &apos;:&apos; + LEFT(RIGHT(VisitOps__StartTimeLocationTZ__c,5),2) 
+ &apos; &apos; + &apos;AM&apos;, 
LEFT(RIGHT(VisitOps__StartTimeLocationTZ__c,14),2) 
+ &apos;/&apos; + LEFT(RIGHT(VisitOps__StartTimeLocationTZ__c,11),2) 
+ &apos;/&apos; + LEFT(VisitOps__StartTimeLocationTZ__c,4) 
+ &apos; &apos; + TEXT(VALUE(LEFT(RIGHT(VisitOps__StartTimeLocationTZ__c,8),2))-12) 
+ &apos;:&apos; + LEFT(RIGHT(VisitOps__StartTimeLocationTZ__c,5),2) 
+ &apos; &apos; + &apos;PM&apos;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Start Time (Location)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisitOps__Start_Time__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Start Time (User)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>VisitOps__Topic_CategoryId__c</fullName>
        <description>Topic category of the Session Topic</description>
        <formula>VisitOps__Topic__r.VisitOps__Topic_Category__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Topic Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisitOps__Topic_Category__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Topic Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisitOps__Topic__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Topic</label>
        <referenceTo>VisitOps__Topic__c</referenceTo>
        <relationshipName>Agendas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>VisitOps__Total_Guests__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Guests</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VisitOps__Visit__c</fullName>
        <label>Visit</label>
        <referenceTo>VisitOps__Visit__c</referenceTo>
        <relationshipName>Agendas</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Agenda Session</label>
    <listViews>
        <fullName>VisitOps__All</fullName>
        <columns>NAME</columns>
        <columns>VisitOps__Agenda_Title__c</columns>
        <columns>VisitOps__Visit__c</columns>
        <columns>VisitOps__Start_Time__c</columns>
        <columns>VisitOps__Total_Guests__c</columns>
        <columns>VisitOps__Topic__c</columns>
        <columns>VisitOps__Place__c</columns>
        <columns>VisitOps__Room__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>VisitOps__Topic_CategoryId__c</columns>
        <columns>VisitOps__Presenters_Accepted__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>A{0000}</displayFormat>
        <label>Agenda ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Agenda Sessions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>VisitOps__EndTime_should_be_later_than_StartTime</fullName>
        <active>true</active>
        <errorConditionFormula>VisitOps__Start_Time__c &gt;= VisitOps__End_Time__c</errorConditionFormula>
        <errorMessage>The End Time should be later than the Start Time</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VisitOps__Location_StartTime_and_EndTime_mandatory</fullName>
        <active>true</active>
        <description>Location based Start and End Times are mandatory</description>
        <errorConditionFormula>ISBLANK(VisitOps__StartTimeLocationTZ__c) || ISBLANK(VisitOps__EndTimeLocationTZ__c)</errorConditionFormula>
        <errorMessage>Start Time (Location) and End Time (Location) are mandatory</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VisitOps__Session_Title_is_Required</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK(VisitOps__Agenda_Title__c)</errorConditionFormula>
        <errorMessage>Please fill in the Session Title</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VisitOps__StartTime_and_EndTime_are_mandatory</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK(VisitOps__Start_Time__c) || ISBLANK(VisitOps__End_Time__c)</errorConditionFormula>
        <errorDisplayField>VisitOps__Start_Time__c</errorDisplayField>
        <errorMessage>Start Time and End Time are mandatory</errorMessage>
    </validationRules>
</CustomObject>